welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:7: error: 'while' expected but '}' found.
	}
        ^