welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	var max = 0;
	for (i<- 0 to nums.length) {
		if (nums(i)>=max) do {
			max = nums(i)
		}
	}
	return max;
}
